fixed content alignment to bg

--- a/css/index.css
+++ b/css/index.css
@@ -86,10 +86,7 @@
 }
 
 .main-bg {
-  display: flex;
-  justify-content: flex-end; /* horizontal: end = right */
-  align-items: flex-start; /* vertical: start = top */
-  padding-top: 2rem; /* move content down */
+  position: relative;
   height: calc(100vh - 120px);
   background-image: url("../img/home-bg.jpg");
   background-repeat: no-repeat;
@@ -97,10 +94,35 @@
   background-position: top center;
 }
 
+.content {
+  position: absolute;
+  right: 10%;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.section-blue {
+  height: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  text-align: right;
+}
+
+.section-yellow {
+  height: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  text-align: right;
+}
+
+
 .headline {
   text-align: end;
-  margin-top: 4rem;
-  margin-right: 8rem;
+  /* padding: 3rem; */
 }
 
 .headline h2 {
@@ -125,8 +147,6 @@
 
 .description {
   text-align: end;
-  margin-top: 8rem;
-  margin-right: 8rem;
 }
 
 .description p {
@@ -135,9 +155,6 @@
   color: #275780;
 }
 
-.description p span {
-  font-size: 1.1rem;
-}
 
 .seeDelightsBtn {
   margin-top: 1rem;
@@ -200,3 +217,5 @@
     display: none;
   }
 }
+
+
